# hayati-bot

./: .dockerignore  .env.example  .eslintrc.js  .gitignore  Cargo.toml  Dockerfile  LICENSE  bot.js  config.example.js  hadir.txt  index.js  package-lock.json  package.json  readme.md  routes.js
actions/: getBookOffer.js  getBpi.js  getGempa.js  getKurs.js  getNews.js  getRules.js  news.js  wikipedia.js
actions/booksoffer/: index.js
actions/gempa/: index.js
actions/kurs/: index.js
actions/slicer/: index.js  slicer.js
src/: main.rs
utils/: getKeyParams.js  index.js  wikipedia.js
